--- a/src/app.wxss
+++ b/src/app.wxss
@@ -1,10 +1,19 @@
 /**app.wxss**/
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+  background: #f9f9f9;
+  min-height: 100%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 234, 1) 100%);
+}
+
+page {
+  height: 100%;
+}
+
+@import 'app-wxa-auto-dark.wxss'
