--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
+  <!-- <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
@@ -10,5 +10,9 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
-  <view bindtap="btnFun">点击</view>
+  <view bindtap="btnFun">点击</view> -->
+  <search-com></search-com>
+  <test-com></test-com>
+  <tag-com></tag-com>
+  <complete-com></complete-com>
 </view>
