add some basic components

--- a/src/components/search-com/search-com.wxml
+++ b/src/components/search-com/search-com.wxml
@@ -1,5 +1,8 @@
 <!--components/search-com/search-com.wxml-->
-<view class="search-com" hover-class="pressed" hover-stay-time="100">
-  <input class="search-input" type="text" disabled="{{active}}"/>
-  <view class="search-icon search-active"></view>
+<view class="search-com" hover-class="pressed" hover-stay-time="100"
+  style="width: {{cusStyle.width}}; height: {{cusStyle.height}};">
+
+  <input class="search-input" type="text" disabled="{{active}}" />
+  <view class="search-icon search-active" style="width: {{cusStyle.iconWidth}}; height: {{cusStyle.iconHeight}}"></view>
+
 </view>
