--- a/src/pages/add-question/add-question.wxss
+++ b/src/pages/add-question/add-question.wxss
@@ -10,7 +10,7 @@
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 234, 1) 100%);
 }
 
-.container > .property {
+.container>.property {
   margin-top: 76rpx;
 }
 
@@ -54,7 +54,7 @@
   width: 640rpx;
 }
 
-.multi-items > view {
+.multi-items>view {
   margin-top: 20rpx;
   padding: 10rpx 30rpx;
   background: white;
@@ -65,4 +65,18 @@
 
 .add {
   
+}
+
+.placeholder>input {
+  background: white;
+  height: 70rpx;
+  width: 460rpx;
+  padding: 10rpx;
+  position: relative;
+  left: 10rpx;
+}
+
+search-com {
+  position: relative;
+  left: 10rpx;
 }
