--- a/src/components/question-com/question-com.wxss
+++ b/src/components/question-com/question-com.wxss
@@ -1,36 +1,38 @@
-/* components/tag-com/tag-com.wxss */
-.tag-cover {
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 120rpx;
-  height: 120rpx;
-  box-shadow: 0 0 30rpx 0 lightgray;
-  border-radius: 80rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.tag-container {
+.question-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.pressed {
-  box-shadow: 0 0 10rpx 0 lightgray;
+
+
+.question-index {
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50rpx;
+  break-after: avoid;
+  box-shadow: 0 0 20rpx lightgray;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 600;
 }
 
-.tag-name {
-  font-size: 24rpx;
-  font-family: 'Helvetica Neue';
+.unactive {
+  background: white;
+  color: black;
 }
 
+.active {
+  background: #70e6a7;
+  color: white;
+}
 
-.tag-back {
+.delete-back {
   background: white;
   position: relative;
-  left: 50rpx;
+  left: 40rpx;
   padding: 14rpx;
   box-shadow: 0 0 20rpx 0 lightgray;
   border-radius: 20rpx;
@@ -43,4 +45,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E %3Cpath id='Icon_ionic-ios-close' data-name='Icon ionic-ios-close' d='M14.352,13.407l2.857-2.858a.67.67,0,1,0-.947-.947L13.405,12.46,10.548,9.6a.67.67,0,1,0-.947.947l2.857,2.858L9.6,16.265a.67.67,0,0,0,.947.947l2.857-2.858,2.857,2.858a.67.67,0,0,0,.947-.947Z' transform='translate(-9.404 -9.407)'/%3E %3C/svg%3E ");
+}
+
+.pressed {
+  box-shadow: 0 0 10rpx 0 lightgray;
 }
