--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -11,8 +11,10 @@
     <text class="user-motto">{{motto}}</text>
   </view>
   <view bindtap="btnFun">点击</view> -->
+  <option-com option="this is a option"></option-com>
+  <question-com></question-com>
   <search-com></search-com>
   <test-com></test-com>
-  <tag-com></tag-com>
+  <tag-com tag="{{tag}}"></tag-com>
   <complete-com></complete-com>
 </view>
