Add API requests

--- a/src/components/option-com/option-com.wxml
+++ b/src/components/option-com/option-com.wxml
@@ -1,6 +1,6 @@
 <view class="option-container">
   
-  <view class="{{selected ? 'active' : ''}} option-tag" hover-stay-time="100" hover-class="pressed">
+  <view class="{{selected ? 'active' : 'unactive'}} option-tag" hover-stay-time="100" hover-class="pressed">
     {{tag}}
   </view>
 
