--- a/src/components/search-com/search-com.wxml
+++ b/src/components/search-com/search-com.wxml
@@ -1,8 +1,8 @@
 <!--components/search-com/search-com.wxml-->
 <view class="search-com" hover-class="pressed" hover-stay-time="100"
-  style="width: {{cusStyle.width}}; height: {{cusStyle.height}};">
+  style="width: {{cusStyle.width}}; height: {{cusStyle.height}};box-shadow: 0 0 {{cusStyle.boxShadow}} 0 lightgray;">
 
-  <input class="search-input" type="text" disabled="{{active}}" />
+  <input class="search-input" placeholder="键入搜索" type="text" disabled="{{active}}" />
   <view class="search-icon search-active" style="width: {{cusStyle.iconWidth}}; height: {{cusStyle.iconHeight}}"></view>
 
 </view>
