--- a/src/pages/my/index.wxml
+++ b/src/pages/my/index.wxml
@@ -1,2 +1,37 @@
-<!--src/pages/my/my.wxml-->
-<text>src/pages/my/my.wxml</text>
+<view class="container">
+  <view class="user-info-card">
+    <view class="avatar-position">
+      <view class="avatar" style="background-image: url({{user.avatar}});">
+      </view>
+
+      <view class="position">
+        {{user.roles[0].description}}
+      </view>
+    </view>
+
+    <view class="username-gender">
+      <view class="username">
+        {{user.username}}
+      </view>
+      <view class="gender {{user.gender == 'MALE' ? 'male' : 'female'}}">
+      </view>
+
+      <view class="signature">
+        {{user.signature}}
+      </view>
+    </view>
+
+    <view class="edits">
+      <view class="edit-user">
+        <view class="edit-icon">
+        </view>
+      </view>
+    </view>
+  </view>
+
+  <view class="actions-list">
+    <view class="action">
+
+    </view>
+  </view>
+</view>
