--- a/src/pages/my/index.wxss
+++ b/src/pages/my/index.wxss
@@ -1,1 +1,99 @@
-/* src/pages/my/my.wxss */
+.container {
+  padding: 28rpx;
+}
+
+
+.user-info-card {
+  background: white;
+  border-radius: 40rpx;
+  height: 320rpx;
+  width: 560rpx;
+  box-shadow: 0 0 12rpx 0 lightgray;
+  display: inline-flex;
+  align-items: center;
+  padding: 40rpx;
+}
+
+
+.avatar-position {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+
+.avatar {
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 60rpx;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.position {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 30rpx;
+  color: #ff4e4a;
+}
+
+
+.username-gender {
+  width: 270rpx;
+  height: 100%;
+  padding-left: 30rpx;
+}
+
+
+.username {
+  font-size: 20px;
+  text-align: left;
+  margin-top: 12rpx;
+}
+
+.gender {
+  width: 40rpx;
+  height: 40rpx;
+  margin-top: 10rpx;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.male {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20.005' viewBox='0 0 20 20.005'%3E%3Cpath id='Icon_ionic-ios-male' data-name='Icon ionic-ios-male' d='M22.726,3.375H17.489a.654.654,0,1,0,0,1.308h3.626L16.777,9.049a8.181,8.181,0,1,0,.923.928l4.366-4.342V9.261a.654.654,0,0,0,1.308,0V4.029A.648.648,0,0,0,22.726,3.375Zm-4.4,11.873a6.83,6.83,0,1,1-2-4.823A6.777,6.777,0,0,1,18.33,15.248Z' transform='translate(-3.375 -3.375)' fill='%2370e6a7'/%3E%3C/svg%3E%0A");
+}
+
+.female {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28.285' height='28.285' viewBox='0 0 28.285 28.285'%3E%3Cpath id='Icon_ionic-ios-female' data-name='Icon ionic-ios-female' d='M4.03,23.383a.64.64,0,0,0,.462-.192l2.154-2.154,1.779,1.779a.648.648,0,0,0,.462.192.64.64,0,0,0,.462-.192.653.653,0,0,0,0-.923L7.569,20.113l2.4-2.4a8.13,8.13,0,1,0-.923-.923l-2.4,2.4L4.866,17.41a.648.648,0,0,0-.462-.192.64.64,0,0,0-.462.192.653.653,0,0,0,0,.923l1.779,1.779L3.568,22.268a.654.654,0,0,0,.462,1.116Zm6.391-16.7a6.821,6.821,0,1,1-2,4.824A6.788,6.788,0,0,1,10.421,6.686Z' transform='translate(-4.779 14.138) rotate(-45)' fill='%23ff5f6b'/%3E%3C/svg%3E%0A");
+}
+
+.edits {
+  height: 100%;
+  width: 200rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.edit-user {
+  border-radius: 30rpx;
+  background: white;
+  padding: 10px;
+  box-shadow: 0 0 10rpx 0 lightgray;
+}
+
+.edit-icon {
+  background-repeat: no-repeat;
+  width: 25rpx;
+  height: 25rpx;
+  background-size: cover;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12.407' height='12.407' viewBox='0 0 12.407 12.407'%3E%3Cpath id='Icon_open-pencil' data-name='Icon open-pencil' d='M9.305,0,7.754,1.551l3.1,3.1L12.407,3.1ZM6.2,3.1,0,9.305v3.1H3.1l6.2-6.2Z' fill='%23007fff'/%3E%3C/svg%3E%0A");
+}
+
+.action-list {}
+
+
+.action {}
