--- a/src/components/search-com/index.wxss
+++ b/src/components/search-com/index.wxss
@@ -21,11 +21,21 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='27' height='27.007'%3E%3Cpath data-name='Icon ionic-ios-search' d='M26.684 25.052l-7.509-7.58a10.7 10.7 0 10-1.624 1.645l7.46 7.53a1.156 1.156 0 001.631.042 1.163 1.163 0 00.042-1.637zm-15.919-5.845a8.45 8.45 0 115.977-2.475 8.4 8.4 0 01-5.977 2.475z'/%3E%3C/svg%3E");
 }
 
+.clear-icon {
+  width: 36rpx;
+  height: 36rpx;
+  position: relative;
+  right: 20rpx;
+  z-index: 1000 !important;
+  background-size: cover;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cg id='surface1' transform='translate(-2.043 -2.043)'%3E%3Cpath id='Path_33' data-name='Path 33' d='M3.23,2.043,2.043,3.23l.6.59,8.216,8.223L2.043,20.856,3.23,22.043l8.813-8.813,8.216,8.223.6.59,1.187-1.187-.59-.6L13.23,12.043,22.043,3.23,20.856,2.043l-8.813,8.813L3.82,2.64Z'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
 .search-active {
   display: block;
 }
 
 .search-input {
-  width: 83%;
+  width: 75%;
   height: 48%;
 }
