--- a/src/pages/search/index.wxml
+++ b/src/pages/search/index.wxml
@@ -1,20 +1,45 @@
 <view class="container">
   <view class="search-bar">
-    <search-com bind:search="search" text="{{searchText}}"></search-com>
+    <search-com bind:search="search" text="{{searchText}}" inputShowed="{{true}}" bind:clear="clearText" bind:searchResult="searchResult">
+    </search-com>
   </view>
 
   <view class="search-tab" wx:if="{{searchText != ''}}">
     <mp-tabs tabs="{{tabs}}" activeTab="{{activeTab}}" swiperClass="weui-tabs-swiper" bindtabclick="onTabClick"
-      bindchange="onTabClick" 
-      tabBackgroundColor="none"
-      activeClass="tab-bar-title__selected">
+      tabBackgroundColor="none" activeClass="tab-bar-title__selected">
 
       <block wx:for="{{tabs}}" wx:key="title">
         <view class="tab-content" data-set="{{item}}" slot="tab-content-{{index}}">
-          <article-list-com style="display: {{activeTab == 0 ? 'block': 'none'}};"></article-list-com>
-          <tag-list-com style="display: {{activeTab == 1 ? 'block': 'none'}};"></tag-list-com>
-          <question-list-com style="display: {{activeTab == 2 ? 'block': 'none'}};"></question-list-com>
-          <user-list-com style="display: {{activeTab == 4 ? 'block': 'none'}};"></user-list-com>
+
+          <!-- articles -->
+          <view class="entity-list" style="display: {{activeTab == 0 ? 'flex': 'none'}};"
+            wx:for="{{articles.entities}}" wx:key="id" wx:for-item="article" wx:for-index="index">
+            <article-list-com article="{{article}}"></article-list-com>
+          </view>
+
+          <!-- tags -->
+          <view class="entity-list" style="display: {{activeTab == 1 ? 'flex': 'none'}};" wx:for="{{tags.entities}}"
+            wx:key="id" wx:for-item="tag" wx:for-index="index">
+            <tag-list-com tag="{{tag}}"></tag-list-com>
+          </view>
+
+          <!-- questions -->
+          <view class="entity-list" style="display: {{activeTab == 2 ? 'flex': 'none'}};"
+            wx:for="{{questions.entities}}" wx:key="id" wx:for-item="question" wx:for-index="index">
+            <question-list-com question="{{question}}"></question-list-com>
+          </view>
+
+          <!-- tests -->
+          <view class="entity-list" style="display: {{activeTab == 3 ? 'flex': 'none'}};" wx:for="{{tests.entities}}"
+            wx:key="id" wx:for-item="test" wx:for-index="index">
+            <test-com test="{{test}}"></test-com>
+          </view>
+
+          <!-- users -->
+          <view class="entity-list" style="display: {{activeTab == 4 ? 'flex': 'none'}};" wx:for="{{users.entities}}"
+            wx:key="id" wx:for-item="user" wx:for-index="index">
+            <user-list-com user="{{user}}"></user-list-com>
+          </view>
         </view>
       </block>
     </mp-tabs>
@@ -40,8 +65,11 @@
           bindtap="toggleSuggestions">
         </view>
       </view>
-      <view wx:if="{{showSuggestions}}" class="texts suggestions">
 
+      <view wx:if="{{showSuggestions}}" class="texts suggestions">
+        <view class="items" wx:for="{{suggestions}}" wx:key='index'>
+          <text-com text="{{item.keyword}}" canDelete="{{false}}" bind:search="searchResult"></text-com>
+        </view>
       </view>
     </view>
   </view>
