--- a/src/pages/search/index.wxss
+++ b/src/pages/search/index.wxss
@@ -57,6 +57,8 @@
 .texts {
   display: inline-flex;
   align-items: center;
+  width: 640rpx;
+  flex-wrap: wrap;
   justify-content: flex-start;
 }
 
@@ -66,6 +68,10 @@
   width: 640rpx;
 }
 
+
+.suggestions {
+  margin-top: 25rpx;
+}
 
 .hint-label {
   font-family: serif;
@@ -83,4 +89,18 @@
   position: relative;
   right: 15rpx;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='11.115' viewBox='0 0 18 11.115'%3E%3Cpath id='Icon_material-expand-more' data-name='Icon material-expand-more' d='M24.885,12.885,18,19.755l-6.885-6.87L9,15l9,9,9-9Z' transform='translate(27 24) rotate(180)'/%3E%3C/svg%3E%0A");
+}
+
+
+.items {
+  margin-right: 20rpx;
+  margin-top: 25rpx;
+}
+
+
+.entity-list {
+  display: flex;
+  flex-direction: column !important;
+  align-items: center !important;
+  margin-top: 30rpx !important;
 }
