--- a/src/pages/main/index.wxml
+++ b/src/pages/main/index.wxml
@@ -4,20 +4,21 @@
   </view>
 
   <view class="tabs">
-    <view class="hot-tab tab {{tabActive == 0 ? 'tab-active': ''}}" data-value="0" bindtap="openTab">
-      热门
-    </view>
-    <view class="uncomplete-tab tab {{tabActive == 1 ? 'tab-active': ''}}"  data-value="1" bindtap="openTab">
-      未完成
-    </view>
-    <view class="history-tab tab {{tabActive == 2 ? 'tab-active': ''}}" data-value="2" bindtap="openTab">
-      历史记录
-    </view>
+    <mp-tabs tabs="{{tabs}}" activeTab="{{activeTab}}" swiperClass="weui-tabs-swiper" bindtabclick="onTabClick"
+      tabBackgroundColor="none" activeClass="tab-bar-title__selected">
+
+      <block wx:for="{{tabs}}" wx:key="title" wx:for-index="tabIndex">
+
+        <!-- tests -->
+        <view class="tab-content" data-set="{{item.title}}" slot="tab-content-0">
+          <view class="entity-list" wx:for="{{tabIndex== 0 ? tests.entities : []}}" wx:key="id" wx:for-item="test"
+            wx:for-index="index">
+            <test-com test="{{test}}"></test-com>
+          </view>
+        </view>
+
+      </block>
+    </mp-tabs>
   </view>
 
-  <view class="tests">
-    <view class="test-case" wx:for="{{tests}}" wx:key="id" wx:for-item="item" wx:for-index="index">
-      <test-com test="{{item}}"></test-com>
-    </view>
-  </view>
 </view>
