--- a/src/pages/info/index.wxml
+++ b/src/pages/info/index.wxml
@@ -1,15 +1,49 @@
 <view class="container">
-  <view class="tags">
+  <view class="content messages">
+    <view class="label">消息</view>
 
+    <view class="card">
+
+    </view>
   </view>
 
-  <view class="statistics">
-    
+  <view class="content statistics">
+    <view class="label">统计</view>
+
+    <view class="card">
+      <view class="infomations">
+        <view class="tested">
+          <view class="info-name">
+            已做测评
+          </view>
+          <view class="count">
+            23
+          </view>
+        </view>
+
+        <view class="my-grade">
+          <view class="info-name">
+            我的排行
+          </view>
+          <view class="count">
+            23
+          </view>
+        </view>
+
+        <view class="wrong-questions">
+          <view class="info-name">
+            错题集
+          </view>
+          <view class="count">
+
+          </view>
+        </view>
+      </view>
+
+      <view class="orders">
+        
+
+      </view>
+    </view>
   </view>
-
-  <view class="informations">
-
-  </view>
-
-
 </view>
