--- a/src/pages/info/index.wxss
+++ b/src/pages/info/index.wxss
@@ -2,15 +2,37 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 28rpx 0;
   justify-content: flex-start;
+}
+
+.content {
+  width: 640rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.label {
+  font-size: 18px;
+  margin-left: 10rpx;
+  text-align: left;
+  margin-bottom: 10rpx;
+}
+
+
+.card {
+  width: 640rpx;
+  height: 600rpx;
+  background: white;
+  box-shadow: 0 0 20rpx 0 lightgray;
+  display: flex;
+  flex-direction: column;
+  border-radius: 40rpx;
 }
 
 
 .statistics {
-
-}
-
-
-.informations {
-  
+  margin-top: 20rpx;
 }
