--- a/src/pages/main/index.wxss
+++ b/src/pages/main/index.wxss
@@ -15,7 +15,7 @@ mp-tabs {
   width: 100% !important;
 }
 
- 
+
 .tabs {
   display: inline-flex;
   width: 100%;
@@ -42,4 +42,42 @@ mp-tabs {
 
 .test-case {
   padding-bottom: 80rpx;
+}
+
+.create-action {
+  position: fixed;
+  right: 60rpx;
+  bottom: 60rpx;
+  width: 110rpx;
+  height: 110rpx;
+  background: #3080f7;
+  border-radius: 80rpx;
+  box-shadow: 0 0 20rpx 0 lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation-name: show-create-action;
+  animation-duration: .1s;
+  animation-timing-function: linear;
+}
+
+.create-icon {
+  width: 50rpx;
+  height: 50rpx;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25'%3E%3Cpath id='Icon_ionic-ios-add' data-name='Icon ionic-ios-add' d='M32.408,19.908H23.021V10.521a1.556,1.556,0,1,0-3.113,0v9.387H10.521a1.556,1.556,0,0,0,0,3.113h9.387v9.387a1.556,1.556,0,0,0,3.113,0V23.021h9.387a1.556,1.556,0,0,0,0-3.113Z' transform='translate(-8.965 -8.965)' fill='%23fff'/%3E%3C/svg%3E%0A");
+}
+
+
+@keyframes show-create-action {
+  0% {
+    scale: 0;
+    opacity: .1;
+  }
+
+  100% {
+    scale: 1;
+    opacity: 1;
+  }
 }
