--- a/src/pages/add-test/index.wxml
+++ b/src/pages/add-test/index.wxml
@@ -2,12 +2,12 @@
 <view class="container">
 
   <view class="test-cover" style="z-index: 1000;">
-    <image-chooser-com bind:finishUpload="finishUpload"></image-chooser-com>
+    <image-chooser-com bind:finishUpload="finishUpload" imgSrc="{{cover}}"></image-chooser-com>
   </view>
 
   <van-cell-group>
     <van-field model:value="{{ name }}" label="名称" placeholder="请输入测评名称" required clearable />
-    <van-field model:value="{{ totalScore }}" type="digit" required clearable label="总分" placeholder="请输入测评总分" />
+    <van-field model:value="{{ totalScore }}" type="digit"  label="总分" placeholder="请输入测评总分"  required clearable/>
     <van-field model:value="{{accessToken}}" label="访问密钥" placeholder="请输入访问密钥" clearable />
     <van-field label="测评详情" type="text" autosize readonly="{{true}}"/>
   </van-cell-group>
