--- a/src/components/search-com/index.wxml
+++ b/src/components/search-com/index.wxml
@@ -1,9 +1,9 @@
 <!--components/search-com/search-com.wxml-->
 <view class="search-com" hover-class="pressed" hover-stay-time="100"
-  style="width: {{cusStyle.width}}; height: {{cusStyle.height}};box-shadow: 0 0 {{cusStyle.boxShadow}} 0 lightgray;">
+  style="width: {{cusStyle.width}}; height: {{cusStyle.height}};box-shadow: 0 0 {{cusStyle.boxShadow}} 0 lightgray; scale: {{scaleStyle}}">
 
-  <input class="search-input" placeholder="键入搜索" type="text" disabled="{{active}}" bindinput="bindInput"
-    value="{{text}}" focus="{{inputShowed}}" disabled="{{!inputShowed}}" />
+  <input class="search-input" placeholder="键入搜索" type="text" disabled="{{!active}}" bindinput="bindInput"
+    value="{{text}}" focus="{{inputShowed}}"/>
 
   <view class="clear-icon" bindtap="clear" style="opacity: {{text != '' ? '100%' : '0'}};"/>
 
