--- a/src/components/complete-com/index.wxml
+++ b/src/components/complete-com/index.wxml
@@ -3,14 +3,18 @@
   <view class="complete-details">
     <view class="complete-icon">
     </view>
-
+    
     <view class="complete-msg">
-      <text>ADD {{message}} COMPLETE!</text>
+      <text>创建{{message}}成功!</text>
     </view>
   </view>
 
   <view class="complete-actions">
-    <button type="primary" >CHECK</button>
-    <button type="default">BACK HOME</button>
+    <view class="button check-button" bindtap="checkResult" hover-class="pressed" hover-stay-time="0" hover-stay-time="0">
+      查看
+    </view>
+    <view class="button back-button" bindtap="backHome" hover-class="pressed" hover-stay-time="0" hover-start-time="0">
+      返回主页
+    </view>
   </view>
 </view>
