--- a/src/pages/add-question/index.wxml
+++ b/src/pages/add-question/index.wxml
@@ -52,7 +52,7 @@
   <view class="weui-cells__title">问题标签:</view>
   <view class="question-tags">
 
-    <search-com text="{{tagSearchText}}" bind:search="searchTag" inputShowed="{{true}}" active="{{true}}"
+    <search-com text="{{tagSearchText}}" bind:search="searchTag" inputShowed="{{false}}" active="{{true}}"
       bind:searchResult="searchTagResult" bind:clear="clearTagText" scaleStyle=".8"></search-com>
 
     <view class="show-search-tags">
